

syntax = "proto3";

package containerd.types;

option go_package = "demo/containerd/api/types;types";

// Descriptor describes a blob in a content store.
//
// This descriptor can be used to reference content from an
// oci descriptor found in a manifest.
// See https://godoc.org/github.com/opencontainers/image-spec/specs-go/v1#Descriptor
message Descriptor {
	string media_type = 1;
	string digest = 2;
	int64 size = 3;
	map<string, string> annotations = 5;
}
